--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Repositório da versão 2 do curso básico de Cypress da Escola Talking About Testing",
   "main": "src/index.html",
   "scripts": {
-    "cy:open": "cypress open",
-    "cy:open:mobile": "Cypress open -- config viewportWidht=410 viewporheigth=860",
-    "test": "cypress run",
-    "test:mobile": "cypress run --config viewporWidth=410 viewportHeigth=860"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -24,6 +21,6 @@
   "license": "MIT",
   "homepage": "https://github.com/wlsf82/cypress-basico-v2#readme",
   "devDependencies": {
-    "cypress": "^13.6.2"
+    "cypress": "^9.5.1"
   }
 }
